# public/openapi.yaml
@@ -1763,6 +1763,16 @@ components:
         createdAt:
           type: string
           format: date-time
+        selectedOptions:
+          type: object
+          description: A map with partId as key and part condition as value
+          additionalProperties:
+             type: integer
+        customerAnswers:
+          type: object
+          description: A map with simplified question ID as key and user answer as value
+          additionalProperties:
+             type: integer
 
     CreateTradeInRequestDTO:
       type: object
@@ -1781,6 +1791,16 @@ components:
         status:
           type: string
           enum: [pending, rejected, accepted]
+        selectedOptions:
+          type: object
+          description: A map with partId as key and part condition as value
+          additionalProperties:
+             type: integer
+        customerAnswers:
+          type: object
+          description: A map with simplified question ID as key and user answer as value
+          additionalProperties:
+             type: integer
       required:
         - variantId
         - tradeInQuote
@@ -1805,6 +1825,16 @@ components:
         status:
           type: string
           enum: [pending, rejected, accepted]
+        selectedOptions:
+          type: object
+          description: A map with partId as key and part condition as value
+          additionalProperties:
+             type: integer
+        customerAnswers:
+          type: object
+          description: A map with simplified question ID as key and user answer as value
+          additionalProperties:
+             type: integer
 
     TradeInRequestsResponse:
       type: object
